Closed Bug 1010706 Opened 11 years ago Closed 11 years ago

Fix uninitialized variable warnings in gfx/layers/opengl/CompositorOGL.cpp

Categories

(Core :: Graphics: Layers, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32
Tracking Status
firefox31 --- unaffected
firefox32 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file)

Bug 950312 added two new clang warnings on OS X: gfx/layers/opengl/CompositorOGL.cpp:922:5: error: variable 'srcBlend' is used uninitialized whenever switch default is taken [-Wsometimes-uninitialized] gfx/layers/opengl/CompositorOGL.cpp:922:5: error: variable 'dstBlend' is used uninitialized whenever switch default is taken [-Wsometimes-uninitialized]
Attachment #8422950 - Flags: review?(matt.woodrow)
Attachment #8422950 - Flags: review?(matt.woodrow) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: