Bug 1010706 - Fix uninitialized variable warnings in gfx/layers/opengl/CompositorOGL.cpp. r=mwoodrow